src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_punct__it_matches_fixed.snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ parse FPunct<'<'> : <),\n    insta_match_test!(* peek FPunct<'<'> : <))"
---
(
    Ok(
        FPunct(
            Span,
        ),
    ),
    Some(
        1,
    ),
)
