src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_punct__it_matches_only.snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ parse Punct : <), insta_match_test!(* peek Punct : <))"
---
(
    Ok(
        Punct {
            char: '<',
            spacing: Alone,
        },
    ),
    Some(
        1,
    ),
)
